# packages/lib/src/entities/bucket_grant.rs
@@ -1,0 +1,36 @@
+use sea_orm::entity::prelude::*;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Debug, PartialEq, DeriveEntityModel, Eq, Serialize, Deserialize)]
+#[sea_orm(table_name = "bucket_grant")]
+pub struct Model {
+    #[sea_orm(primary_key)]
+    pub id: Uuid,
+    pub credential_id: Uuid,
+    pub bucket_id: Uuid,
+    pub organization_id: Option<Uuid>,
+    pub prefix: String,
+    pub can_read: bool,
+    pub can_write: bool,
+    pub created_at: DateTimeWithTimeZone,
+    pub updated_at: DateTimeWithTimeZone,
+}
+
+#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
+pub enum Relation {
+    #[sea_orm(
+        belongs_to = "super::credential::Entity",
+        from = "Column::CredentialId",
+        to = "super::credential::Column::Id",
+        on_delete = "Cascade"
+    )]
+    Credential,
+}
+
+impl Related<super::credential::Entity> for Entity {
+    fn to() -> RelationDef {
+        Relation::Credential.def()
+    }
+}
+
+impl ActiveModelBehavior for ActiveModel {}
